<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityGf3" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mensaje8"
            android:textAlignment="center"
            android:textColor="#7786D8"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mensaje9"
            android:textAlignment="center"
            android:textColor="#707FD3"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="187dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="13dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mensaje10"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mensaje15"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="31dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mensaje13"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txtPesoInicial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txtDias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <EditText
                android:id="@+id/txtTemperatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|right|end"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnCalculaGf3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mensaje17" />

        <TextView
            android:id="@+id/txtResultadoGf3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mensaje18"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="103dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            app:srcCompat="@drawable/gf3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/iviewInicio"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_gravity="center|end"
            app:srcCompat="@drawable/inicio" />
    </LinearLayout>

</LinearLayout>